--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <title>React App</title>
+    <script src="https://kit.fontawesome.com/123aa91270.js" crossorigin="anonymous"></script>
+    <title>Easy Shop Online</title>
   </head>
   <body>
     <div id="root"></div>
